@@ -1,4 +1,4 @@
-#	$NetBSD: DEVNAMES,v 1.186 2005/07/30 06:14:50 skrll Exp $
+#	$NetBSD: DEVNAMES,v 1.187 2005/09/05 18:54:10 kiyohara Exp $
 #
 # This file contains all used device names and defined attributes in
 # alphabetical order. New devices added to the system somewhere should first
@@ -1005,6 +1005,7 @@ ppbus			MI
 ppi			hp300
 pps			MI
 ps			vax
+psh3lcd			hpcsh
 psh3tp			hpcsh
 psycho			sparc64
 ptsc			acorn32
